--- a/app/src/main/res/layout/fragment_create_question.xml
+++ b/app/src/main/res/layout/fragment_create_question.xml
@@ -3,21 +3,14 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:background="@android:color/holo_blue_bright"
     tools:context=".view.CreateQuestionFragment">
 
-    <!-- TODO: Update blank fragment layout -->
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="history question 1" />
+    <android.support.v7.widget.RecyclerView
+        android:id="@+id/historyQuestionRecyclerView"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent">
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="history question 2" />
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="history question 3" />
+    </android.support.v7.widget.RecyclerView>
 
 </LinearLayout>
