--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -19,4 +19,11 @@
         <item name="android:textColorPrimary">@android:color/white</item>
     </style>
 
+    <!--float action button style-->
+    <style name="menu_labels_style">
+        <item name="android:background">@drawable/fab_label_background</item>
+        <item name="android:textColor">#2B2B2B</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
 </resources>
