添加下拉刷新条

--- a/app/src/main/res/layout/fragment_create_question.xml
+++ b/app/src/main/res/layout/fragment_create_question.xml
@@ -7,12 +7,18 @@
     android:orientation="vertical"
     tools:context=".view.CreateQuestionFragment">
 
-    <android.support.v7.widget.RecyclerView
-        android:id="@+id/historyQuestionRecyclerView"
+    <android.support.v4.widget.SwipeRefreshLayout
+        android:id="@+id/historyQuestionRefreshLayout"
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-    </android.support.v7.widget.RecyclerView>
+        <android.support.v7.widget.RecyclerView
+            android:id="@+id/historyQuestionRecyclerView"
+            android:layout_width="match_parent"
+            android:layout_height="match_parent">
+
+        </android.support.v7.widget.RecyclerView>
+    </android.support.v4.widget.SwipeRefreshLayout>
 
 
     <com.stugame.main.stuenligshgame.component.floatingActionButton.FloatingActionsMenu
