--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -10,6 +10,7 @@
     <android.support.design.widget.AppBarLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:id="@+id/mainAppBarLayout"
         android:theme="@style/AppTheme.AppBarOverlay">
 
         <include layout="@layout/base_toolbar" />
@@ -18,7 +19,7 @@
             android:id="@+id/tabLayout"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:background="@android:color/holo_blue_dark" />
+            android:background="@color/colorPrimary" />
     </android.support.design.widget.AppBarLayout>
 
 
