--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -16,5 +16,8 @@
     <color name="blue_semi_transparent">#805677fc</color>
     <color name="blue_semi_transparent_pressed">#80738ffe</color>
 
+    <!--actionbar temp-->
+    <color name="colorPrimaryDark2">#c26800</color>
+
 
 </resources>
