--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -6,6 +6,8 @@
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
         <item name="colorAccent">@color/colorAccent</item>
+        <!--转场动画-->
+        <item name="android:windowContentTransitions" tools:targetApi="lollipop">true</item>1
     </style>
 
     <style name="AppTheme.NoActionBar">
