--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -20,4 +20,6 @@
     <color name="colorPrimaryDark2">#c26800</color>
 
 
+    <color name="createQuestionBackgroundColor">#424242</color>
+
 </resources>
