--- a/app/src/main/res/layout/fragment_create_question.xml
+++ b/app/src/main/res/layout/fragment_create_question.xml
@@ -2,7 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@android:color/holo_blue_bright"
+    android:background="@color/createQuestionBackgroundColor"
     tools:context=".view.CreateQuestionFragment">
 
     <android.support.v4.widget.SwipeRefreshLayout
