--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <resources>
-    <color name="colorPrimary">#3F51B5</color>
-    <color name="colorPrimaryDark">#303F9F</color>
+    <color name="colorPrimary">#2196f3</color>
+    <color name="colorPrimaryDark">#0091ea</color>
     <color name="colorAccent">#FF4081</color>
     <color name="colorAccentPress">#ff216d</color>
 
@@ -17,9 +17,12 @@
     <color name="blue_semi_transparent_pressed">#80738ffe</color>
 
     <!--actionbar temp-->
-    <color name="colorPrimaryDark2">#c26800</color>
+    <color name="colorPrimary2">#009688</color>
+    <color name="colorPrimaryDark2">#00897b</color>
 
 
-    <color name="createQuestionBackgroundColor">#424242</color>
+    <color name="mainBackgroundColor">#e1f5fe</color>
+    <color name="mainBackgroundColor2">#b2dfdb</color>
+
 
 </resources>
